# grab-camera

./: .gitignore  CMakeLists.txt  README.md  build.sh  getdata.sh  main.cpp  test_camera
include/: AWIspApi.h  cam.hpp  sunxi_camera_v2.h
src/: cam.cpp
